fix horizontal overflow

--- a/Product Listing Page (PLP)/src/components/ProductPage/components/Sort/Sort.module.scss
+++ b/Product Listing Page (PLP)/src/components/ProductPage/components/Sort/Sort.module.scss
@@ -1,3 +1,7 @@
+.sort__element__container {
+    position: relative;
+}
+
 .sort__option__container {
     border: 1px solid black;
     padding: .1rem 1rem;
@@ -19,7 +23,9 @@
     justify-content: space-between;
     // padding: 0 .3rem;
     background-color: rgb(255, 255, 255);
-    width: 100%;
+    // width: 100%;
+    left: 0;
+    right: 0;
     height: 0;
     // overflow-y: scroll;
     opacity: 0;
